addons/argo-workflows/service/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:
  #  nginx.ingress.kubernetes.io/backend-protocol: https
  #  kubernetes.io/ingress.class: "nginx"
  #  nginx.ingress.kubernetes.io/proxy-body-size: 10m
  name: workflows
  namespace: argo
spec:
  ingressClassName: cilium
  rules:
  - host: workflows.example.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: argo-server
            port:
              number: 2746
        pathType: Prefix
